# redstryke

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  start_dashboard.bat
config/: attack_categories.yaml  report_templates_config.yaml  settings.yaml
core/: __init__.py
core/agents/: analyst.py  base.py  debrief.py  exfil.py  exploit.py  fingerprint.py  kill_chain.py  payload.py  persist.py  pivot.py  planner.py  scout.py
core/evaluator/: __init__.py  evaluator.py
core/executor/: __init__.py
core/executor/garak_runner/: __init__.py  runner.py
core/executor/pyrit_runner/: __init__.py  runner.py
core/executor/web_runner/: runner.py
core/memory/: __init__.py
core/memory/sql_store/: __init__.py  sqlite_memory.py
core/memory/vector_store/: __init__.py  chroma_memory.py
core/planner/: LAYER1_ATTACK_PLANNER_PROMPT.md  __init__.py  planner.py
core/reporter/: __init__.py  generator.py
core/reporter/templates/: report.html
core/scanner/: orchestrator.py
core/scanner/web/: finding.py  recon.py
core/scanner/web/checks/: credentials.py  (+4 more)
dashboard/: __init__.py  app.py
dashboard/static/: app.js  dashboard.html  index.html  login.html  signup.html  style.css
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md
scripts/: download_models.py  init_db.py  verify_setup.py
tests/: __init__.py
tests/integration/: __init__.py  test_pipeline.py
tests/unit/: __init__.py  test_chroma_memory.py  test_evaluator.py  test_garak_runner.py  test_planner.py  test_pyrit_runner.py  test_reporter.py  test_sqlite_memory.py
(+4 files in other folders)
